--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.1",
     "@zegocloud/zego-uikit-prebuilt": "^2.17.2",
     "axios": "^1.6.7",
     "bcryptjs": "^3.0.3",
